fixed stack floating and spacing

--- a/style.css
+++ b/style.css
@@ -264,17 +264,17 @@ section h1{
     width: 30px;
 }
 #stackcont{
-    display: flex;
-    justify-content: space-between;
+    
 }
 .skillcontainer{
+    float: left;
     margin: 0px 15px 15px 0px;
     font-size: 25px;
     color:rgb(40, 40, 83);
     display: flex;
     align-items: center;
     background: white;
-    max-width: 300px;
+    width: 300px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 3px inset;
     border-radius: 7px;
 }
@@ -282,6 +282,9 @@ section h1{
     width: 100px;
     padding: 15px;
     padding-right: 25px;
+}
+.placeholder{
+    clear: both;
 }
 
 
